[gd_scene load_steps=7 format=3 uid="uid://2ikvy6rs6ql4"]

[ext_resource type="Script" uid="uid://b80j3ekkd2kgt" path="res://Collectibles/health_crate.gd" id="1_jkaub"]
[ext_resource type="FontFile" uid="uid://bcs10ci4xmn4v" path="res://UI/fonts/Transformers Movie font.ttf" id="2_aqio6"]
[ext_resource type="AudioStream" uid="uid://b6fn20imap0y8" path="res://Collectibles/health-pickup.mp3" id="3_mh2uq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3b2r7"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_3ku02"]
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ybvh"]
size = Vector3(2, 1, 1)

[node name="HealthCrate" type="Area3D" groups=["health_crate"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 7
script = ExtResource("1_jkaub")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3b2r7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_3ku02")
skeleton = NodePath("../CollisionShape3D")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_5ybvh")

[node name="HelpText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
billboard = 1
text = "E to collect health crate"
font = ExtResource("2_aqio6")
font_size = 128

[node name="PickupAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_mh2uq")
volume_db = 30.0
unit_size = 100.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
